unpackaged/main/default/objects/HI_New_Plans_ApplicationsBenefitsPackage__c/HI_New_Plans_ApplicationsBenefitsPackage__c.object-meta.xml
<CustomObject>
    <label>HI New Plans ApplicationsBenefitsPackage</label>
    <nameField>
        <displayFormat>HINPBP-{0000000000}</displayFormat>
        <label>HI New Plans ApplicationsBenefitsPackage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HI New Plans ApplicationsBenefitsPackage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>