unpackaged/main/default/objects/HI_New_Plans_ApplicationsBenefitsPackage__c/fields/Benefits_Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Package_Id__c</fullName>
    <externalId>true</externalId>
    <label>Benefits Package Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>