unpackaged/main/default/objects/HI_New_Plans_ApplicationsBenefitsPackage__c/fields/New_Plans_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Plans_Application_Id__c</fullName>
    <externalId>true</externalId>
    <label>New Plans Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>