unpackaged/main/default/objects/HI_New_Plans_ApplicationsBenefitsPackage__c/fields/Processing_State__c.field-meta.xml
<CustomField>
    <fullName>Processing_State__c</fullName>
    <label>Processing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Processing_States</valueSetName>
    </valueSet>
</CustomField>